@@ -6,6 +6,11 @@
 	
 2009-01-16  Helmut Eller  <heller@common-lisp.net>
 
+	* swank.lisp (pprint-eval): Also return the output produced during
+	evaluation.
+
+2009-01-16  Helmut Eller  <heller@common-lisp.net>
+
 	* swank-openmcl.lisp (break-in-sldb): Display the argument.
 
 2009-01-16  Helmut Eller  <heller@common-lisp.net>
